progress on many fronts, maily chapter 3

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -3,6 +3,7 @@
 \newglossaryentry{AST}{name=AST,description={Abstract Syntax Tree}}
 \newglossaryentry{AOP}{name=AOP,description={Aspect Oriented Programming}}
 \newglossaryentry{BDD}{name=BDD,description={Behaviour Driven Development}}
+\newglossaryentry{BRMS}{name=BRMS,description={Business Rules Management System}}
 \newglossaryentry{CI}{name=CI,description={Continuous Integration}}
 \newglossaryentry{CORBA}{name=CORBA,description={Common Object Request Broker Architecture}}
 \newglossaryentry{CRUD}{name=CRUD,description={Create, Read, Update, Delete}}
@@ -18,6 +19,8 @@
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
 \newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
+\newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
+\newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
 \newglossaryentry{OMG}{name=OMG,description={Object Modeling Group}}
@@ -27,6 +30,7 @@
 \newglossaryentry{PIM}{name=PIM,description={Platform Independent Model}}
 \newglossaryentry{PSM}{name=PSM,description={Platform Specific Model}}
 \newglossaryentry{REST}{name=REST,description={Representational State Transfer}}
+\newglossaryentry{RHS}{name=RHS,description={Right-hand side}}
 \newglossaryentry{RMI}{name=RMI,description={Remote Method Invocation}}
 \newglossaryentry{RPC}{name=RPC,description={Remote Procedure Call}}
 \newglossaryentry{SLOC}{name=SLOC,description={Source Lines of Code}}
