--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -404,7 +404,8 @@ Proto bylo nutné využ\'{\i}t dodatečné knihovny, jmenovitě
 \end{itemize}
 }
 
-
+% TODO: hodit sem použité návrhové vzory, určitě je tam visitor, factory a builder
+% TODO: nebo možná do návrhu?
 
 \subsection{Popis implementace}
 
