--- a/reference.bib
+++ b/reference.bib
@@ -557,44 +557,101 @@
 }
 
 @article{postel1981transmission,
-    title={Transmission control protocol},
-    author={Postel, Jon},
-    year={1981}
+    title = {Transmission control protocol},
+    author = {Postel, Jon},
+    year = {1981}
 }
 
 @article{fox2001peer,
-    title={Peer-to-peer networks},
-    author={Fox, Geoffrey},
-    journal={Computing in Science \& Engineering},
-    volume={3},
-    number={3},
-    pages={75--77},
-    year={2001},
-    publisher={IEEE},
+    title = {Peer-to-peer networks},
+    author = {Fox, Geoffrey},
+    journal = {Computing in Science \& Engineering},
+    volume = {3},
+    number = {3},
+    pages = {75--77},
+    year = {2001},
+    publisher = {IEEE},
     address = {New York},
 }
 
 @techreport{fielding1999hypertext,
-    title={Hypertext transfer protocol--HTTP/1.1},
-    author={Fielding, Roy and Gettys, Jim and Mogul, Jeffrey and Frystyk, Henrik and Masinter, Larry and Leach, Paul and Berners-Lee, Tim},
-    year={1999}
+    title = {Hypertext transfer protocol--HTTP/1.1},
+    author = {Fielding, Roy and Gettys, Jim and Mogul, Jeffrey and Frystyk, Henrik and Masinter, Larry and Leach, Paul and Berners-Lee, Tim},
+    year = {1999}
 }
 
 @article{soley2000model,
-    title={Model driven architecture},
-    author={Soley, Richard and others},
-    journal={OMG white paper},
-    volume={308},
-    number={308},
-    pages={5},
-    year={2000}
+    title = {Model driven architecture},
+    author = {Soley, Richard and others},
+    journal = {OMG white paper},
+    volume = {308},
+    number = {308},
+    pages = {5},
+    year = {2000}
 }
 
 @incollection{pardon2011towards,
-    title={Towards distributed atomic transactions over RESTful services},
-    author={Pardon, Guy and Pautasso, Cesare},
-    booktitle={REST: From Research to Practice},
-    pages={507--524},
-    year={2011},
-    publisher={Springer}
+    title = {Towards distributed atomic transactions over RESTful services},
+    author = {Pardon, Guy and Pautasso, Cesare},
+    booktitle = {REST: From Research to Practice},
+    pages = {507--524},
+    year = {2011},
+    publisher = {Springer},
+    address = {Cham, Switzerland},
+}
+
+@online{jetbrainsmps,
+    key = {MPS: Domain-Specific Language Creator by JetBrains},
+    title = {MPS: Domain-Specific Language Creator by JetBrains},
+    url = {https://www.jetbrains.com/mps/},
+    urldate = {2018-04-23}
+}
+
+@article{ward1994language,
+    title = {Language-oriented programming},
+    author = {Ward, Martin P},
+    journal = {Software-Concepts and Tools},
+    volume = {15},
+    number = {4},
+    pages = {147--161},
+    year = {1994}
+}
+
+@article{littman1987mental,
+    title = {Mental models and software maintenance},
+    author = {Littman, David C and Pinto, Jeannine and Letovsky, Stanley and Soloway, Elliot},
+    journal = {Journal of Systems and Software},
+    volume = {7},
+    number = {4},
+    pages = {341--355},
+    year = {1987},
+    publisher = {Elsevier},
+    address = {New York, USA},
+}
+
+@incollection{soloway1986empirical,
+    title = {Empirical studies of programming knowledge},
+    author = {Soloway, Elliot and Ehrlich, Kate},
+    booktitle = {Readings in artificial intelligence and software engineering},
+    pages = {507--521},
+    year = {1986},
+    publisher = {Elsevier},
+    address = {New York, USA},
+}
+
+@online{drools,
+    key = {Drools - Drools - Business Rules Management System (Java\texttrademark, Open Source)},
+    title = {Drools - Drools - Business Rules Management System (Java\texttrademark, Open Source)},
+    url = {https://www.drools.org/},
+    urldate = {2018-04-23}
+}
+
+@incollection{forgy1988rete,
+    title={Rete: A fast algorithm for the many pattern/many object pattern match problem},
+    author={Forgy, Charles L},
+    booktitle={Readings in Artificial Intelligence and Databases},
+    pages={547--559},
+    year={1988},
+    publisher={Elsevier},
+    address = {New York, USA},
 }
