--- a/sourcecode.sty
+++ b/sourcecode.sty
@@ -112,3 +112,12 @@ morestring=[b]',
 morestring=[b]",
 stringstyle=\color{darkgreen},
 }
+
+\lstdefinelanguage{Drools}{
+keywords={rule,dialect,when,then,end},
+keywordstyle=\color{blue},
+sensitive=true,
+morestring=[b]',
+morestring=[b]",
+stringstyle=\color{darkgreen},
+}
