few fixes in chapter 2

--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -225,10 +225,11 @@ svůj \gls{ESB}.
 \subsection{Microservices}\label{sec:microservices}
 
 \goal{Microservices a budoucnost SOA}
-Nov\'ym trendem posledn\'{\i}ch let jsou takzvané \textit{Microservices}.
+Nov\'ym trendem posledn\'{\i}ch let je architektura zvaná \textit{Microservices}.
 Přináš\'{\i} několik zajmav\'ych konceptů, které specializuj\'{\i} a konkretizuj\'{\i}
 principy \gls{SOA}. Microservices se tedy daj\'{\i} chápat jako podmnožina
-\gls{SOA}. Základn\'{\i} myšlenkou je v\'yvoj informačn\'{\i}ho systému jako množiny
+\gls{SOA}, ačkoliv existují i názory, že jde o odlišné architektury~\cite{richards2015microservices}.
+Základn\'{\i} myšlenkou je v\'yvoj informačn\'{\i}ho systému jako množiny
 mal\'ych oddělen\'ych služeb, které jsou spouštěny v samostatn\'ych procesech
 a komunikuj\'{\i} spolu pomoc\'{\i} jednoduch\'ych protokolů~\cite{lewis2014microservices}.
 
@@ -250,7 +251,7 @@ s objednávkami.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.5\linewidth]{figures/monolith-vs-microservices.pdf}
-    \caption{Porovnán\'{\i} struktury monolitické architektury a microservices}
+    \caption{Porovnán\'{\i} struktury monolitické architektury a microservices~\cite{lewis2014microservices}}
     \label{fig:monolith-vs-microservices}
 \end{figure}
 
@@ -291,7 +292,7 @@ efektivněji.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/microservices-deployment.pdf}
-    \caption{Porovnán\'{\i} nasazen\'{\i} monolitické architektury a microservices}
+    \caption{Porovnán\'{\i} nasazen\'{\i} monolitické architektury a microservices~\cite{lewis2014microservices}}
     \label{fig:microservices-deployment}
 \end{figure}
 
@@ -345,7 +346,7 @@ znázorněno na obrázku~\ref{fig:choreography-orchestration}~\cite{orchestratio
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/choreography-orchestration.pdf}
-    \caption{Porovnán\'{\i} orchestrace a choreografie služeb}
+    \caption{Porovnán\'{\i} orchestrace a choreografie služeb~\cite{cerny2017disambiguation}}
     \label{fig:choreography-orchestration}
 \end{figure}
 
