--- a/reference.bib
+++ b/reference.bib
@@ -647,11 +647,19 @@
 }
 
 @incollection{forgy1988rete,
-    title={Rete: A fast algorithm for the many pattern/many object pattern match problem},
-    author={Forgy, Charles L},
-    booktitle={Readings in Artificial Intelligence and Databases},
-    pages={547--559},
-    year={1988},
-    publisher={Elsevier},
+    title = {Rete: A fast algorithm for the many pattern/many object pattern match problem},
+    author = {Forgy, Charles L},
+    booktitle = {Readings in Artificial Intelligence and Databases},
+    pages = {547--559},
+    year = {1988},
+    publisher = {Elsevier},
     address = {New York, USA},
+}
+
+@article{richards2015microservices,
+    title = {Microservices vs. service-oriented architecture},
+    author = {Richards, Mark},
+    year = {2015},
+    publisher = {O'Reilly Media},
+    address = {Newton, Massachusetts, USA},
 }
