chapter 3 more progress

--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -350,7 +350,7 @@ znázorněno na obrázku~\ref{fig:choreography-orchestration}~\cite{orchestratio
     \label{fig:choreography-orchestration}
 \end{figure}
 
-\section{Nedostatky současného př\'{\i}stupu}
+\section{Nedostatky současného př\'{\i}stupu}\label{sec:shortcomings}
 
 \goal{Navázán\'{\i} na předchoz\'{\i} sekci}
 Jak jsme zjistili v předchoz\'{\i}ch odstavc\'{\i}ch, \gls{SOA} se zaměřuje zejména na
