--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -18,6 +18,7 @@
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
 \newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
+\newglossaryentry{JPQL}{name=JPQL,description={Java Persistence Query Language}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
 \newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
@@ -36,6 +37,7 @@
 \newglossaryentry{SLOC}{name=SLOC,description={Source Lines of Code}}
 \newglossaryentry{SOA}{name=SOA,description={Service Oriented Architecture}}
 \newglossaryentry{SOAP}{name=SOAP,description={Simple Object Access Protocol}}
+\newglossaryentry{SQL}{name=SQL,description={Structured English Query Language}}
 \newglossaryentry{TCP}{name=TCP,description={Transmission Control Protocol}}
 \newglossaryentry{UC}{name=UC,description={Use Case}}
 \newglossaryentry{UI}{name=UI,description={User Interface}}
