--- a/reference.bib
+++ b/reference.bib
@@ -663,3 +663,21 @@
     publisher = {O'Reilly Media},
     address = {Newton, Massachusetts, USA},
 }
+
+@inproceedings{cemus2016context,
+    title={Context-aware input validation in information systems},
+    author={Cemus, Karel},
+    booktitle={POSTER 2016-20th International Student Conference on Electrical Engineering},
+    year={2016}
+}
+
+@article{cemus2017automated,
+    title={Automated extraction of business documentation in enterprise information systems},
+    author={Cemus, Karel and Cerny, Tomas},
+    journal={ACM SIGAPP Applied Computing Review},
+    volume={16},
+    number={4},
+    pages={5--13},
+    year={2017},
+    publisher={ACM}
+}
