chapter 3 first draft ready

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -18,6 +18,7 @@
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
 \newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
+\newglossaryentry{Java EE}{name=Java EE,description={Java Platform, Enterprise Edition}}
 \newglossaryentry{JPQL}{name=JPQL,description={Java Persistence Query Language}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
