--- a/reference.bib
+++ b/reference.bib
@@ -665,19 +665,40 @@
 }
 
 @inproceedings{cemus2016context,
-    title={Context-aware input validation in information systems},
-    author={Cemus, Karel},
-    booktitle={POSTER 2016-20th International Student Conference on Electrical Engineering},
-    year={2016}
+    title = {Context-aware input validation in information systems},
+    author = {Cemus, Karel},
+    booktitle = {POSTER 2016-20th International Student Conference on Electrical Engineering},
+    year = {2016}
 }
 
 @article{cemus2017automated,
-    title={Automated extraction of business documentation in enterprise information systems},
-    author={Cemus, Karel and Cerny, Tomas},
-    journal={ACM SIGAPP Applied Computing Review},
-    volume={16},
-    number={4},
-    pages={5--13},
-    year={2017},
-    publisher={ACM}
+    title = {Automated extraction of business documentation in enterprise information systems},
+    author = {Cemus, Karel and Cerny, Tomas},
+    journal = {ACM SIGAPP Applied Computing Review},
+    volume = {16},
+    number = {4},
+    pages = {5--13},
+    year = {2017},
+    publisher = {ACM}
+}
+
+@online{businessrulespython,
+    key = {business-rules – PyPi},
+    title = {business-rules – PyPi},
+    url = {https://pypi.org/project/business-rules/},
+    urldate = {2018-04-23}
+}
+
+@online{flexrule,
+    key = {FlexRule – Business Rule Language},
+    title = {FlexRule – Business Rule Language},
+    url = {http://www.flexrule.com/archives/business-rule-language/},
+    urldate = {2018-04-23}
+}
+
+@online{jrules,
+    key = {IBM Knowledge Center - JRules engine mode},
+    title = {IBM Knowledge Center - JRules engine mode},
+    url = {https://www.ibm.com/support/knowledgecenter/en/SSZJPZ_11.3.0/com.ibm.swg.im.iis.conn.jrules.use.doc/topics/c_jrules_enginemode.html},
+    urldate = {2018-04-23}
 }
